# imdb-project

./: .gitignore  README.md  docker-compose.yml  makefile
api/: Dockerfile  pyproject.toml
api/src/actors/: models.py  repository.py  schemas.py
api/src/movies/: repository.py  schemas.py  service.py
cli/: imdb.py  pyproject.toml
cli_module/: README.md  pyproject.toml
cli_module/imdb_cli/: formatters.py  main.py  models.py
cli_module/test/: test_cli_actor.py  test_cli_movie.py  test_formatter.py
client_server_module/api/: main.py
client_server_module/api/core/: config.py  database.py  logger.py
client_server_module/api/src/actors/: models.py  repository.py  routes.py  schemas.py  service.py
client_server_module/api/src/movies/: models.py  repository.py  routes.py  schemas.py  service.py
ingest_module/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
ingest_module/app/: main.py
ingest_module/config/: constants.py  datasets.py
ingest_module/extract/: imdb_extractor.py
ingest_module/load/: imdb_loader.py
ingest_module/test/: test_extractor.py  test_loader.py  test_metadata.py  test_transformer.py
ingest_module/transform/: imdb_transformer.py
ingest_module/utils/: database.py  datasets.py  datasets_config.py  metadata.py
notebooks/: bdd_integration.ipynb  bdd_test.ipynb  data_exploration.ipynb
server_module/: README.md  main.py  pyproject.toml
server_module/core/: config.py  database.py  logger.py
server_module/src/actors/: models.py  repository.py  routes.py  schemas.py  service.py
server_module/src/movies/: models.py  repository.py  routes.py  schemas.py  service.py
server_module/tests/: test_actors.py  test_movies.py
