[project]
name = "api"
version = "0.1.0"
description = "IMDb API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "greenlet>=3.3.0",
    "python-dotenv>=1.0.0",
]