[project]
name = "ingest-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.0",
    "psycopg2-binary>=2.9.0",
]
